<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".NewUser">

    <EditText
        android:id="@+id/name_edit_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:gravity="center_horizontal"
        android:hint="@string/str_user_name_edit_text_view"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding_size_8"
        android:textSize="@dimen/text_size_24" />

    <EditText
        android:id="@+id/age_edit_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:gravity="center_horizontal"
        android:hint="@string/str_user_age_edit_text_view"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/padding_size_8"
        android:textSize="@dimen/text_size_24" />

    <EditText
        android:id="@+id/job_title_edit_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:gravity="center_horizontal"
        android:hint="@string/str_user_job_title_edit_text_view"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding_size_8"
        android:textSize="@dimen/text_size_24" />

    <EditText
        android:id="@+id/gender_edit_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:gravity="center_horizontal"
        android:hint="@string/str_user_gender_edit_text_view"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/padding_size_8"
        android:textSize="@dimen/text_size_24" />

    <Button
        android:id="@+id/display_users_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:text="@string/str_show_user_into_screen" />

</LinearLayout>